# AskMyDocs

./: .env.example  .gitignore  AGENTS.md  AGENTS_LOG.md  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  dependencies.py  logging.py  main.py  observability.py  runtime.py
app/agent/: __init__.py  agent.py  models.py  prompts.py  tools.py
app/api/: __init__.py  routes_documents.py  routes_health.py  routes_query.py
app/db/: models.py  schemas.py  session.py  vector_store.py
app/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py
app/retrieval/: context_builder.py  exa_search.py  fusion.py  search.py
app/services/: document_service.py  query_service.py
migrations/: 001_bootstrap.sql
scripts/: bootstrap.sh  ingest_sample.py  migrate.py  reset_db.py
tests/: test_agent_schema.py  test_chunker.py  test_config.py  test_context_builder.py  test_exa_search.py  test_fusion.py  test_health.py  test_ingestion.py  test_integration_db.py  test_logging.py  test_observability.py  test_query.py  test_retrieval.py  test_scripts.py  test_session.py
