[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "askmydocs"
version = "0.1.0"
description = "Local document Q&A assistant over PDFs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "docling>=2.80.0",
  "fastapi>=0.135.1",
  "httpx>=0.28.1",
  "langfuse>=4.0.0",
  "logfire>=4.29.0",
  "pgvector>=0.4.2",
  "psycopg[binary]>=3.3.3",
  "pydantic>=2.12.5",
  "pydantic-ai>=1.61.0,<1.67.0",
  "pydantic-settings>=2.13.1",
  "sqlalchemy>=2.0.48",
  "sqlmodel>=0.0.37",
  "uvicorn[standard]>=0.42.0",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.408",
  "pytest>=9.0.2",
  "ruff>=0.15.6",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "integration: tests that require a live PostgreSQL instance",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.13"
include = ["app", "tests", "scripts"]
typeCheckingMode = "basic"
